--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">AWS Cloud Resume Challenge</h3>
-                            <h4><a href="!#" target="_blank">GitHub Repo</a></h4>
+                            <h4><a href="https://github.com/aayanb134/AWS-Cloud-Resume-Challenge" target="_blank">GitHub Repo</a></h4>
                             <div class="subheading mb-3">Serverless Web Application hosting a portfolio</div>
                             <p>Took advantage of various AWS service such as Lambda, S3, API Gateway, DynamoDB and Cloudfront. Added a visitor counter using Python, which stores data in DynamoDB. Used API Gateway and Lambda to manage any interactions between the frontend and the DynamoDB database. Used Terraform to define and deploy AWS resources using IaC (Infrastructure as Code). Set up GitHub Actions for CI/CD (Continuous Integration/Continuous Deployment) for the frontend and backend</p>
                         </div>
