--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
                     <div class="subheading mb-5">
                                          • DevOps Engineer • 
                     </div>
-                    <p class="lead mb-5">I am a DevOps Engineer, enthusiastic about cloud and tech in general. I have been self-studying and have, so far, completed and obtained certifications with AWS and Hashicorp. I have been refining my skills with AWS Services, Terraform and CI/CD, and am currently learning Python and Docker. Below you can find some projects that I have completed, showcasing skills I have aquired as well as practical experience for future roles. </p>
+                    <p class="lead mb-5">I'm a DevOps Engineer passionate about cloud and tech. I hold certifications in AWS and HashiCorp, and I'm skilled in AWS Services, Terraform, and CI/CD. Currently, I'm learning Python and Docker, and I've completed projects to demonstrate my expertise for future roles. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/aayanbutt" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/aayanb134" target="_blank"><i class="fab fa-github"></i></a>
