--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,7 +129,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            GitHub Actions
+                            GitHub Actions (CI/CD)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
