--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/aayanbutt" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/aayanb134" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="mailto:aayanb134@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                        <a class="social-icon" href="mailto:aayanb134@gmail.com" target="_blank"><i class="fa-solid fa-bars"></i></a>
                         <a class="social-icon" href="./aayan-cv.pdf" target="_blank" download="aayan-cv"><i class="fa-solid fa-file"></i></a>
                     </div>
                 </div>
