--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,11 +13,13 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="css/dark.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
+       
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Aayan Butt</span>
@@ -38,7 +40,11 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
+            <div class="button-wrapper"><button onclick="toggleDarkMode()" class="dark-button">
+                <i class="fa-regular fa-moon fa-2xl"></i>
+           </button></div>
             <section class="resume-section" id="about">
+               
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Aayan
