--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,7 +150,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><a href="https://www.credly.com/badges/cd99ecf9-53a7-4396-ac77-7898cf5a6589/public_url" target="_blank"><iconify-icon icon="mdi:aws" width="70" height="70"></iconify-icon></i></a></li>
                         <li class="list-inline-item"><a href="https://www.credly.com/badges/90030df9-957c-49c4-86b5-46152e608fa5/public_url" target="_blank"><iconify-icon icon="mdi:aws" width="70" height="70"></iconify-icon></i></a></li>
-                        <li class="list-inline-item"><a href="!#" target="_blank"><iconify-icon icon="mdi:terraform" width="70" height="70"></iconify-icon></a></li>
+                        <li class="list-inline-item"><a href="https://www.credly.com/badges/73be215c-7c2e-4501-8a90-f69c659dfd0a/public_url" target="_blank"><iconify-icon icon="mdi:terraform" width="70" height="70"></iconify-icon></a></li>
                     </ul>
                 </div>
             </section>
